Fix layout bug in Firefox

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,5 +1,5 @@
 html, body { height: 100%; min-height: 100%; }
-#layout { min-height: 100%; }
+#layout { height: 100%; min-height: 100%; }
 
 body {
     background: #434343 url("pennies.jpg") no-repeat;
